# gui

./: .gitignore
src/gui1/: CMakeLists.txt  package.xml
src/gui1/include/gui1/: customWidgets.h  customwidget.h  leftwidget.h  mainwindow.h  mycp.h  qcustomplot.h  rosnode.h  vizlib.h
src/gui1/src/: customwidget.cpp  gui.desktop  gui1_node.cpp  leftwidget.cpp  leftwidget.ui  mainwindow.cpp  mycp.cpp  qcustomplot.cpp  rosnode.cpp  vizlib.cpp
